added multiple filters while searching